Top-nav z-index fixing.

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,6 @@ input[type="search"]::-webkit-search-results-decoration {
     padding: 7px 0 9px 0;
     box-shadow: 0 3px 20px -10px #000000;
     position: relative;
-    z-index: 0;
 }
 .okayNav {
     margin: 0 auto !important;
@@ -176,8 +175,8 @@ input[type="search"]::-webkit-search-results-decoration {
     background: url("../images/background.png") repeat;
     width: 100%;
     overflow: hidden;
-    position: relative;
-    z-index: -1;
+    /*position: relative;*/
+    /*z-index: 0;*/
 }
 .main-slider-container {
     padding: 65px 0 0 115px;
@@ -459,8 +458,8 @@ ul.column li:first-child {
     /*color: #2e2e33;*/
     /*font-size: 1.4rem;*/
     /*font-weight: bold;*/
-    position: relative;
-    z-index: 1;
+    /*position: relative;*/
+    /*z-index: 1;*/
 }
 .okayNav__nav--visible {
     overflow: hidden;
@@ -533,6 +532,7 @@ ul.column li:first-child {
     -webkit-transform: translateX(0);
     transform: translateX(0);
     display: block;
+    z-index: 2;
 }
 
 
@@ -546,7 +546,7 @@ ul.column li:first-child {
     width: 40px;
     height: 20px;
     float: left;
-    z-index: 1;
+    z-index: 0;
     top: 2px;
     left: 10px;
 }
